--- a/Weather_Database.ipynb
+++ b/Weather_Database.ipynb
@@ -7,20 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the dependencies\n",
+    "# Import the dependencies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "914c9571",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
+    "import numpy as np\n",
+    "from config import weather_api_key\n",
+    "from datetime import datetime\n",
+    "import requests\n",
+    "from citipy import citipy\n",
+    "import time"
    ]
   },
   {
@@ -28,46 +23,58 @@
    "id": "ba926855",
    "metadata": {},
    "source": [
-    "# Create a new set of 2,000 random latitudes and longitudes."
+    "# #3. Create a new set of 2,000 random latitudes and longitudes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "37b01427",
+   "execution_count": 11,
+   "id": "4d1f007d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_data = []"
+    "x = lats\n",
+    "y = lngs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "cbbb7dad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x2b424c58208>"
+       "<zip at 0x1fd59a9a8c8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lats = np.random.uniform(low = -90.000, high = 90.000, size = 1500)\n",
-    "lngs = np.random.uniform(low = -180.000, high = 180.000, size = 1500)\n",
+    "lats = np.random.uniform(low = -90.000, high = 90.000, size = 2000)\n",
+    "lngs = np.random.uniform(low = -180.000, high = 180.000, size = 2000)\n",
     "lat_lngs = zip(lats,lngs)\n",
     "lat_lngs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "id": "160c4f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the lats and lngs to a list\n",
+    "coordinates = list(lat_lngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "c8161ede",
    "metadata": {},
    "outputs": [],
@@ -80,12 +87,12 @@
    "id": "37be101b",
    "metadata": {},
    "source": [
-    "# Get the nearest city using the citipy module."
+    "# #4. Get the nearest city using the citipy module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "8695ef46",
    "metadata": {},
    "outputs": [],
@@ -95,42 +102,198 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "68c797fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "752"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list for holding the cities.\n",
+    "cities = []\n",
+    "\n",
+    "# Identify the nearest city for each latitude and longitude combination.\n",
+    "coordinates = zip(x, y)\n",
+    "for coordinate in coordinates:\n",
+    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
+    "\n",
+    "# If the city is unique, then we will add it to the cities list.\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "        \n",
+    "# Print the city count to confirm sufficient count.\n",
+    "len(cities)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4912df57",
    "metadata": {},
    "source": [
-    "# Perform an API call with the OpenWeatherMap."
+    "#  #5. Perform an API call with the OpenWeatherMap."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5873c618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import the requests library\n",
-    "import requests\n",
-    "\n",
-    "# import the API key\n",
-    "from config import weather_api_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "4a513a4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#starting URL for Weather Map API Call\n",
+    "# Starting URL for Weather Map API Call\n",
     "url= \"https://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid=\" + weather_api_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "a09c8b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "cec6ec57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ebab3d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_data = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b20254a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty list to hold the weather data.\n",
+    "city_data = []\n",
+    "# Print the beginning of the logging.\n",
+    "print(\"Beginning Data Retrieval     \")\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Create counters.\n",
+    "record_count = 1\n",
+    "set_count = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef69624c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through all the cities in our list.\n",
+    "for i, city in enumerate(cities):\n",
+    "\n",
+    "    # Group cities in sets of 50 for logging purposes.\n",
+    "    if (i % 50 == 0 and i >= 50):\n",
+    "        set_count += 1\n",
+    "        record_count = 1\n",
+    "        time.sleep(60)\n",
+    "\n",
+    "    # Create endpoint URL with each city.\n",
+    "    city_url = url + \"&q=\" + city.replace(\" \",\"+\")\n",
+    "    \n",
+    "    # Log the URL, record, and set numbers and the city\n",
+    "    print(f\"Processing Record {record_count} of Set {set_count} | {city}\")\n",
+    "    \n",
+    "    #Add 1 to the record count\n",
+    "    record_count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5283f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "        # Parse the JSON and retrieve data.\n",
+    "        city_weather = requests.get(city_url).json()\n",
+    "        \n",
+    "        # Parse out the needed data.\n",
+    "        city_lat = city_weather[\"coord\"][\"lat\"]\n",
+    "        city_lng = city_weather[\"coord\"][\"lon\"]\n",
+    "        city_max_temp = city_weather[\"main\"][\"temp_max\"]\n",
+    "        city_min_temp = city_weather[\"main\"][\"temp_min\"]\n",
+    "        city_humidity = city_weather[\"main\"][\"humidity\"]\n",
+    "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
+    "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
+    "        city_descr = city_weather[\"weather\"][0][\"description\"]\n",
+    "        city_country = city_weather[\"sys\"][\"country\"]\n",
+    "        \n",
+    "        # Convert the date to ISO standard.\n",
+    "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "        \n",
+    "        # Append the city information into city_data list.\n",
+    "        city_data.append({\"City\": city.title(),\n",
+    "                          \"Lat\": city_lat,\n",
+    "                          \"Lng\": city_lng,\n",
+    "                          \"Max Temp\": city_max_temp,\n",
+    "                          \"Min Temp\": city_min_temp,\n",
+    "                          \"Humidity\": city_humidity,\n",
+    "                          \"Cloudiness\": city_clouds,\n",
+    "                          \"Wind Speed\": city_wind,\n",
+    "                          \"Description\": city_descr,\n",
+    "                          \"Country\": city_country,\n",
+    "                          \"Date\": city_date})\n",
+    "        # If an error is experienced, skip the city.\n",
+    "except:\n",
+    "        print(\"City not found. Skipping...\")\n",
+    "        pass\n",
+    "\n",
+    "# Indicate that Data Loading is complete.\n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Data Retrieval Complete      \")\n",
+    "print(\"-----------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d14ede",
    "metadata": {},
    "outputs": [],
    "source": []
