--- a/Weather_Database.ipynb
+++ b/Weather_Database.ipynb
@@ -1345,8 +1345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0af5a671",
+   "execution_count": 22,
+   "id": "834ebd02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,8 +1355,17 @@
     "\n",
     "# Export the City_Data into a CSV.\n",
     "city_data_df = pd.DataFrame(city_data)\n",
-    "city_data_df.to_csv(path_or_buf='cities.csv', index_label='City_ID')"
+    "# city_data_df.to_csv(path_or_buf='cities.csv', index_label='City_ID')\n",
+    "city_data_df.to_csv(path_or_buf='WeatherPy_Database.csv', index_label='City_ID')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74f951f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
